Fix routing issue on home page

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -15,7 +15,7 @@
                         <h1>Webcal - Tacho Calibration Software.</h1>
                         <p>Securely view and manage your your tacho data from your web browser.</p>
                         <p>
-                            <a class="btn btn-lg btn-primary" role="button">Log In Now</a>
+                            <a class="btn btn-lg btn-primary" role="button" [routerLink]="['Login']">Log In Now</a>
                         </p>
                     </div>
                     <div class="col-md-3">
