--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -2,13 +2,13 @@
     <div class="card card-container">
         <img id="profile-img" src="/img/logo.png" alt="Skillray Transport Services" />
         <p id="profile-name" class="profile-name-card"></p>
-        <form class="form-signin">
+        <form class="form-signin" (ngSubmit)="authenticate(username, password, rememberMe)">
             <span id="reauth-email" class="reauth-email"></span>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <input [(ngModel)]="username" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <input [(ngModel)]="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
             <div id="remember" class="checkbox">
                 <label>
-                    <input type="checkbox" value="remember-me"> Remember me
+                    <input [(ngModel)]="rememberMe" type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
             <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
