Scaled down images, minor tweaks to layout

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+            <a class="navbar-brand" rel="home" href="#" title="Webcal - Tacho Calibration Software">
                 <img style="max-width:200px; margin-top: -7px;" src="/img/logo.png" alt="Skillray Transport Services">
             </a>
         </div>
