--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -11,7 +11,8 @@
         <div class="item active">
             <div class="container">
                 <div class="carousel-caption">
-                    <div class="col-md-9">
+                    <div class="col-md-9">                        
+                        <img style="max-width:200px; margin-top: -7px;" src="/img/webcal.png" alt="Webcal Calibration Software">
                         <h1>Webcal - Tacho Calibration Software.</h1>
                         <p>Securely view and manage your your tacho data from your web browser.</p>
                         <p>
@@ -92,7 +93,7 @@
         </div>
         <div class="col-md-4 col-xs-6 thumb">
             <div class="thumbnail">
-                <img class="img-responsive" src="/img/4-DriverCardDetails.png" alt="Driver Card Details">
+                <img class="img-responsive" src="/img/4-DriverCardDetails.png" alt="Driver Card Details" style="max-height: 230px">
                 <h2>Built in Driver Card reader</h2>
                 <p>Can automatically read and display driver card data</p>
             </div>
@@ -139,4 +140,6 @@
             <p>Tel: 01925 880081</p>
         </div>
     </div>
+    
+    <div class="hr-divider"></div>
 </div>
