--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <div class="card card-container">
-        <img id="profile-img" src="/img/logo.png" alt="Skillray Transport Services" />
+        <img id="profile-img" src="/img/webcal.png" alt="Webcal Calibration Software" />
         <p id="profile-name" class="profile-name-card"></p>
         <form class="form-signin" (ngSubmit)="authenticate(username, password, rememberMe)">
             <span id="reauth-email" class="reauth-email"></span>
