--- a/app/login/styles.scss
+++ b/app/login/styles.scss
@@ -74,3 +74,9 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+#profile-img{
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
+}
