--- a/app/app.component.html
+++ b/app/app.component.html
@@ -15,10 +15,10 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
                 <li class="active"><a [routerLink]="['Home']">Home</a></li>
-                <li><a [routerLink]="['Login']" *ngIf="!isLoggedIn">Login</a></li>
-                <li><a (click)="logout()" *ngIf="isLoggedIn">Logout</a></li>
-                <li><a [routerLink]="['Dashboard']" *ngIf="isLoggedIn">Dashboard</a></li>
-                <li class="dropdown" *ngIf="isLoggedIn">
+                <li><a [routerLink]="['Login']">Login</a></li>
+                <li><a (click)="logout()">Logout</a></li>
+                <li><a [routerLink]="['Dashboard']">Dashboard</a></li>
+                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a [routerLink]="['GenerateEmail']">Generate Email</a></li>
