--- a/app/app.component.html
+++ b/app/app.component.html
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav pull-right">
                 <li class="active"><a [routerLink]="['Home']">Home</a></li>
                 <li><a [routerLink]="['Login']">Login</a></li>
-                <li><a (click)="logout()">Logout</a></li>
+                <li><a href="#" (click)="logout()">Logout</a></li>
                 <li><a [routerLink]="['Dashboard']">Dashboard</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
