--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -7,12 +7,8 @@
             <div class="col-xs-6">
                 <div class="form-group">
                     <label for="favourite">Filter by depot name</label>
-                    <select id="favourite" name="favourite" class="form-control">
-                        <option value="">-- Please select... --</option>
-                        <option value="TFS">TFS</option>
-                        <option value="GitHub">GitHub</option>
-                        <option value="BitBucket">BitBucket</option>
-                        <option value="Kiln">Kiln</option>
+                    <select id="favourite" name="favourite" class="form-control" [(ngModel)]="_selectedDepotName">
+                        <option *ngFor="#item of _depotNames">{{item}}</option>
                     </select>
                 </div>
             </div>
@@ -22,25 +18,25 @@
     <table class="table table-striped table-hover table-responsive">
         <thead>
         <tr>
+            <th>&nbsp;</th>
             <th>Company Name</th>
             <th>Doc Type</th>
             <th>Expiration</th>
             <th>Registration</th>
             <th>Technician</th>
             <th>Customer</th>
-            <th>Inv. Number</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Btac</td>
-            <td>Tachograph</td>
-            <td>26/2/18</td>
-            <td>WX16 MKJ</td>
-            <td>Brian Bessant</td>
-            <td>Man Truck and Bus</td>
-            <td>------</td>
+        <tr *ngFor="#recentCalibration of _recentCalibrations | depotname : _selectedDepotName">
+            <td><img src="/img/{{recentCalibration.documentIcon}}.png" [attr.alt]="recentCalibration.documentType"/> </td>
+            <td>{{recentCalibration.companyName}}</td>
+            <td>{{recentCalibration.documentType}}</td>
+            <td>{{asDate(recentCalibration.expiration) | date}}</td>
+            <td>{{recentCalibration.registration}}</td>
+            <td>{{recentCalibration.technician}}</td>
+            <td>{{recentCalibration.customer}}</td>
             <td>
                 <button class="btn btn-secondary">Email</button>
             </td>
