--- a/app/app.component.html
+++ b/app/app.component.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" rel="home" href="#" title="Webcal - Tacho Calibration Software">
+            <a class="navbar-brand" rel="home" title="Webcal - Tacho Calibration Software">
                 <img style="max-width:200px; margin-top: -7px;" src="/img/logo.png" alt="Skillray Transport Services">
             </a>
         </div>
@@ -16,10 +16,10 @@
             <ul class="nav navbar-nav pull-right">
                 <li class="active"><a [routerLink]="['Home']">Home</a></li>
                 <li><a [routerLink]="['Login']">Login</a></li>
-                <li><a href="#" (click)="logout()">Logout</a></li>
+                <li><a (click)="logout()">Logout</a></li>
                 <li><a [routerLink]="['Dashboard']">Dashboard</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a [routerLink]="['GenerateEmail']">Generate Email</a></li>
                         <li><a [routerLink]="['InspectionData']">Inspection Data</a></li>
