--- a/app/dashboard/styles.scss
+++ b/app/dashboard/styles.scss
@@ -6,6 +6,8 @@
         height: 140px;
         border-radius: 10px;
         margin-bottom: 20px;
+        list-style-type: none;
+        
 
         a{
             color:#666;   
