--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -15,7 +15,8 @@
         </div>
     </form>
     <hr/>
-    <table class="table table-striped table-hover table-responsive">
+    <spinner [isRunning]="isRequesting"></spinner>
+    <table class="table table-striped table-hover table-responsive" *ngIf="!isRequesting">
         <thead>
         <tr>
             <th>&nbsp;</th>
