--- a/app/utilities/spinner/spinner.component.html
+++ b/app/utilities/spinner/spinner.component.html
@@ -11,4 +11,4 @@
     <div class="sk-circle10 sk-circle"></div>
     <div class="sk-circle11 sk-circle"></div>
     <div class="sk-circle12 sk-circle"></div>
-</div>'
+</div>
