--- a/app/register-user/register-user.component.html
+++ b/app/register-user/register-user.component.html
@@ -1,4 +1,25 @@
-<h3>Register User</h3>
-<div>
-	
+<div class="container">
+    <div class="card card-container">
+        <form role="form" class="form-signup">
+            <div class="form-group has-feedback">
+                <label for="emailAddress">Email address</label>
+                <input type="email" class="form-control" id="emailAddress" placeholder="you@example.com" required>
+                <span class="form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <label for="companyName">Company Name</label>
+                <input type="text" class="form-control" id="companyName" required>
+                <span class="form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <label for="licenseKey">License Expiration Date</label>
+                <input type="date" class="form-control" id="licenseKey" required>
+                <span class="form-control-feedback"></span>
+            </div>
+            <div class="two-buttons">
+                <button class="btn btn-lg btn-primary btn-block btn-reigster" type="submit">Register</button>
+                <button class="btn btn-lg btn-primary btn-block" type="button">Cancel</button>
+            </div>
+        </form>
+    </div>
 </div>
