--- a/app/software-licenses/software-licenses.component.html
+++ b/app/software-licenses/software-licenses.component.html
@@ -24,6 +24,7 @@
         </div>
     </div>
     <hr />
+    <spinner [isRunning]="isRequesting"></spinner>
     <table class="table table-striped table-hover table-responsive">
         <thead>
         <tr>
