--- a/app/login/login.component.html
+++ b/app/login/login.component.html
@@ -4,7 +4,7 @@
         <p id="profile-name" class="profile-name-card"></p>
         <form role="form" class="form-signup" (ngSubmit)="authenticate(username, password, rememberMe)">
             <div class="form-group has-feedback">
-                <label for="inputEmail">Email address</label>
+                <label for="inputEmail">Username</label>
                 <input [(ngModel)]="username" type="text" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
                 <span class="form-control-feedback"></span>
             </div>
