--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -15,8 +15,8 @@
         </div>
     </form>
     <hr/>
-    <spinner [isRunning]="isRequesting"></spinner>
-    <table class="table table-striped table-hover table-responsive" *ngIf="!isRequesting">
+    <spinner [isRunning]="_isRequesting"></spinner>
+    <table class="table table-striped table-hover table-responsive" *ngIf="!_isRequesting">
         <thead>
         <tr>
             <th>&nbsp;</th>
