--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -15,42 +15,49 @@
         </div>
     </form>
     <hr/>
-    <spinner [isRunning]="_isRequesting"></spinner>
-    <table class="table table-striped table-hover table-responsive" *ngIf="!_isRequesting">
+
+    <table class="table table-striped table-hover table-responsive">
         <thead>
-        <tr>
-            <th>&nbsp;</th>
-            <th>Company Name</th>
-            <th>Doc Type</th>
-            <th>Expiration</th>
-            <th>Registration</th>
-            <th>Technician</th>
-            <th>Customer</th>
-            <th>Actions</th>
-        </tr>
+            <tr>
+                <th>&nbsp;</th>
+                <th>Company Name</th>
+                <th>Doc Type</th>
+                <th>Expiration</th>
+                <th>Registration</th>
+                <th>Technician</th>
+                <th>Customer</th>
+                <th>Actions</th>
+            </tr>
         </thead>
         <tbody>
-        <tr *ngFor="#recentCalibration of _recentCalibrations | depotname : selectedDepotName" class="pointer" (click)="downloadCertificate(recentCalibration)">
-            <td><img src="/img/{{recentCalibration.documentIcon}}.png" [attr.alt]="recentCalibration.documentType"/> </td>
-            <td>{{recentCalibration.companyName}}</td>
-            <td>{{recentCalibration.documentType}}</td>
-            <td>{{asDate(recentCalibration.expiration) | date}}</td>
-            <td>{{recentCalibration.registration}}</td>
-            <td>{{recentCalibration.technician}}</td>
-            <td>{{recentCalibration.customer}}</td>
-            <td>
-                <button class="btn btn-secondary">Email</button>
-            </td>
-        </tr>
+            <tr *ngIf="_isRequesting">
+                <td colspan="8">
+                    <spinner [isRunning]="_isRequesting"></spinner>
+                </td>
+            </tr>
+            <tr *ngFor="#recentCalibration of _recentCalibrations | depotname : selectedDepotName | paginate: { itemsPerPage: 10, currentPage: p }"
+            class="pointer" (click)="downloadCertificate(recentCalibration)">
+                <td><img src="/img/{{recentCalibration.documentIcon}}.png" [attr.alt]="recentCalibration.documentType" /> </td>
+                <td>{{recentCalibration.companyName}}</td>
+                <td>{{recentCalibration.documentType}}</td>
+                <td>{{asDate(recentCalibration.expiration) | date}}</td>
+                <td>{{recentCalibration.registration}}</td>
+                <td>{{recentCalibration.technician}}</td>
+                <td>{{recentCalibration.customer}}</td>
+                <td>
+                    <button class="btn btn-secondary">Email</button>
+                </td>
+            </tr>
         </tbody>
         <tfoot>
-        <tr>
-            <td colspan="8">
-                <button class="btn btn-primary">Download</button>
-                <button class="btn btn-primary">Email</button>
-                <button class="btn btn-primary">Email Preview</button>
-            </td>
-        </tr>
+            <tr>
+                <td colspan="8">
+                    <button class="btn btn-primary">Download</button>
+                    <button class="btn btn-primary">Email</button>
+                    <button class="btn btn-primary">Email Preview</button>
+                </td>
+            </tr>
         </tfoot>
     </table>
+    <pagination-controls (pageChange)="p = $event" #api></pagination-controls>
 </div>
