--- a/app/software-licenses/software-licenses.component.html
+++ b/app/software-licenses/software-licenses.component.html
@@ -24,23 +24,27 @@
         </div>
     </div>
     <hr />
-    <spinner [isRunning]="_isRequesting"></spinner>
     <table class="table table-striped table-hover table-responsive">
         <thead>
-        <tr>
-            <th>Client Name</th>
-            <th>Licenses</th>
-            <th class="actions">Actions</th>
-        </tr>
+            <tr>
+                <th>Client Name</th>
+                <th>Licenses</th>
+                <th class="actions">Actions</th>
+            </tr>
         </thead>
         <tbody>
-        <tr *ngFor="#client of clients | clientName:filterValue">
-            <td>{{client.name}}</td>
-            <td>{{client.licenses.length}}</td>
-            <td class="actions">
-                <button class="btn btn-secondary" (click)="selectClient(client)" data-toggle="modal" data-target="#modal">Add/View Licenses</button>
-            </td>
-        </tr>
+            <tr *ngIf="_isRequesting">
+                <td colspan="8">
+                    <spinner [isRunning]="_isRequesting"></spinner>
+                </td>
+            </tr>
+            <tr *ngFor="#client of clients | clientName:filterValue">
+                <td>{{client.name}}</td>
+                <td>{{client.licenses.length}}</td>
+                <td class="actions">
+                    <button class="btn btn-secondary" (click)="selectClient(client)" data-toggle="modal" data-target="#modal">Add/View Licenses</button>
+                </td>
+            </tr>
         </tbody>
     </table>
 </div>
@@ -87,6 +91,9 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
