--- a/css/site.scss
+++ b/css/site.scss
@@ -11,12 +11,23 @@ $color_suva_gray_approx: #888;
 $white: #fff;
 $color_celeste_approx: #ccc;
 
+$black_5: rgba(0, 0, 0, 0.05);
+$color_alto_approx: #ddd;
+$color_wild_sand_approx: #f5f5f5;
+$color_mountain_mist_approx: #999999;
+
 //fonts
 $font_0: Source Sans Pro;
 $font_1: sans-serif;
 
 //urls
 $url_0: url(/img/slide-bg.png);
+
+%extend_1 {
+	color: $color_mountain_mist_approx;
+	background-color: transparent;
+	cursor: default;
+}
 
 body {
     font-family: $font_0, $font_1;
@@ -276,17 +287,17 @@ html {
     background-color: #f5f5f5;
 }
 
-.btn.btn-primary {
-    color: #fff;
-    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-    background-color: #da4f49;
-    *background-color: #bd362f;
-    background-image: linear-gradient(to bottom,#ee5f5b,#bd362f);
-    background-repeat: repeat-x;
-    border-color: #bd362f #bd362f #802420;
-    border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffee5f5b',endColorstr='#ffbd362f',GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+.btn.btn-primary, pagination-controls .pagination .current {
+    color: #fff !important;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.25) !important;
+    background-color: #da4f49 !important;
+    *background-color: #bd362f !important;
+    background-image: linear-gradient(to bottom,#ee5f5b,#bd362f) !important;
+    background-repeat: repeat-x !important;
+    border-color: #bd362f #bd362f #802420 !important;
+    border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) rgba(0,0,0,.25) !important;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffee5f5b',endColorstr='#ffbd362f',GradientType=0) !important;
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false) !important;
 }
 
 th.max {
@@ -383,4 +394,17 @@ th.max {
     margin-left: auto;
     margin-right: auto;
     display:block;
+}
+
+.pagination a, .pagination-previous.disabled span, .pagination-previous a::before, .pagination-previous.disabled::before, .pagination li.current span {
+    font-size: 18px;
+}
+
+pagination-controls li.pagination-previous.disabled, pagination-controls li.pagination-next.disabled{
+    visibility: hidden;
+}
+
+pagination-controls li.current{
+    top:-10px;
+    position:relative;
 }
