Minor usability tweaks

--- a/app/register-user/register-user.component.html
+++ b/app/register-user/register-user.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="two-buttons">
                 <button class="btn btn-lg btn-primary btn-block btn-reigster" type="submit">Register</button>
-                <button class="btn btn-lg btn-primary btn-block" type="button">Cancel</button>
+                <button class="btn btn-lg btn-primary btn-block" (click)="cancel()" type="button">Cancel</button>
             </div>
         </form>
     </div>
