--- a/app/inspection-data/inspection-data.component.html
+++ b/app/inspection-data/inspection-data.component.html
@@ -14,6 +14,7 @@
         <div class="row">
             <div class="col-xs-6">
                 <button class="btn btn-primary" type="submit">Find</button>
+                <button class="btn btn-default" type="button" (click)="reset()">Reset</button>
             </div>
         </div>
     </form>
