--- a/app/app.component.html
+++ b/app/app.component.html
@@ -21,6 +21,8 @@
                 <li class="dropdown" [hidden]="!isLoggedIn">
                     <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a [routerLink]="['QCCheck']">QC Check</a></li>
+                        <li><a [routerLink]="['CentreCheck']">Centre Check</a></li>
                         <li><a [routerLink]="['GenerateEmail']">Generate Email</a></li>
                         <li><a [routerLink]="['InspectionData']">Inspection Data</a></li>
                         <li><a [routerLink]="['CalibrationsDue']">Calibrations Due</a></li>
