--- a/app/register-user/register-user.component.html
+++ b/app/register-user/register-user.component.html
@@ -13,8 +13,11 @@
             </div>
             <div class="form-group has-feedback">
                 <label for="licenseKey">License Expiration Date</label>
-                <input type="date" class="form-control" id="licenseKey" required>
+                <input type="date" class="form-control" id="licenseKey" #licenseKey (change)="getLicenseKey(licenseKey.value)" required>
                 <span class="form-control-feedback"></span>
+            </div>
+            <div class="form-group" *ngIf="_licenseKey">
+                <p><strong>License Key:</strong> {{_licenseKey}}</p>
             </div>
             <div class="two-buttons">
                 <button class="btn btn-lg btn-primary btn-block btn-reigster" type="submit">Register</button>
