--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -17,6 +17,7 @@
                         <p>Securely view and manage your your tacho data from your web browser.</p>
                         <p>
                             <a class="btn btn-lg btn-primary" role="button" [routerLink]="['Login']">Log In Now</a>
+                            <a href="http://www.webcalconnect.com/software/webcal-fast.exe" class="btn btn-primary btn-lg">Download Free</a>
                         </p>
                     </div>
                     <div class="col-md-3">
