--- a/app/utilities/spinner/spinner.component.html
+++ b/app/utilities/spinner/spinner.component.html
@@ -1,4 +1,4 @@
-<div [hidden]="!isDelayedRunning" class="sk-fading-circle">
+<div *ngIf="isDelayedRunning" class="sk-fading-circle">
     <div class="sk-circle1 sk-circle"></div>
     <div class="sk-circle2 sk-circle"></div>
     <div class="sk-circle3 sk-circle"></div>
