--- a/app/register-user/register-user.component.html
+++ b/app/register-user/register-user.component.html
@@ -1,26 +1,26 @@
 <div class="container">
     <div class="card card-container">
-        <form role="form" class="form-signup">
+        <form role="form" class="form-signup" (ngSubmit)="submit()" #form="ngForm">
             <div class="form-group has-feedback">
                 <label for="emailAddress">Email address</label>
-                <input type="email" class="form-control" id="emailAddress" placeholder="you@example.com" required>
+                <input type="email" class="form-control" id="emailAddress" placeholder="you@example.com" [(ngModel)]="_userRegistration.emailAddress" ngControl="emailAddress" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
                 <span class="form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
                 <label for="companyName">Company Name</label>
-                <input type="text" class="form-control" id="companyName" required>
+                <input type="text" class="form-control" id="companyName" [(ngModel)]="_userRegistration.companyName" ngControl="companyName" required>
                 <span class="form-control-feedback"></span>
             </div>
             <div class="form-group has-feedback">
                 <label for="licenseKey">License Expiration Date</label>
-                <input type="date" class="form-control" id="licenseKey" #licenseKey (change)="getLicenseKey(licenseKey.value)" required>
+                <input type="date" class="form-control" id="licenseKey" #licenseKey (change)="getLicenseKey(licenseKey.value)" [(ngModel)]="_userRegistration.expiration" ngControl="expiration" required>
                 <span class="form-control-feedback"></span>
             </div>
-            <div class="form-group" *ngIf="_licenseKey">
-                <p><strong>License Key:</strong> {{_licenseKey}}</p>
+            <div class="form-group" *ngIf="_userRegistration.licenseKey">
+                <p><strong>License Key:</strong> {{_userRegistration.licenseKey}}</p>
             </div>
             <div class="two-buttons">
-                <button class="btn btn-lg btn-primary btn-block btn-reigster" type="submit">Register</button>
+                <animated-button [IsDisabled]="_isRequesting" [Type]="'btn btn-lg btn-primary btn-block btn-reigster'" [Label]="'Register'" [WorkingLabel]="'Registering...'"></animated-button>
                 <button class="btn btn-lg btn-primary btn-block" (click)="cancel()" type="button">Cancel</button>
             </div>
         </form>
