--- a/css/site.scss
+++ b/css/site.scss
@@ -408,3 +408,11 @@ pagination-controls li.current{
     top:-10px;
     position:relative;
 }
+
+.ng-valid[required] {
+  border-left: 5px solid #42A948;
+}
+
+.ng-invalid {
+  border-left: 5px solid #a94442;
+}
