Rename animated button to wc-button

--- a/app/inspection-data/inspection-data.component.html
+++ b/app/inspection-data/inspection-data.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="row">
             <div class="col-xs-6">
-                <animated-button [IsDisabled]="_isRequesting" [Label]="'Find'" [WorkingLabel]="'Finding...'"></animated-button>
+                <wc-button [isDisabled]="_isRequesting" [label]="'Find'" [workingLabel]="'Finding...'"></wc-button>
                 <button class="btn btn-default" type="button" (click)="reset()">Reset</button>
             </div>
         </div>
