--- a/app/confirm-account/confirm-account.component.html
+++ b/app/confirm-account/confirm-account.component.html
@@ -1,3 +1,20 @@
 <div class="container">
-    <spinner [isRunning]="_isRequesting"></spinner>
+    <div class="card card-container">
+        <form role="form" class="form-signup" (ngSubmit)="submit()" #form="ngForm">
+            <div class="form-group has-feedback">
+                <label for="password">Enter a password</label>
+                <input type="password" class="form-control" id="password" [(ngModel)]="_tokens.password" ngControl="password" pattern="/^[a-zA-Z]{6,}$/" required>
+                <span class="form-control-feedback"></span>
+            </div>
+            <div class="form-group has-feedback">
+                <label for="confirmPassword">Confirm password</label>
+                <input type="password" class="form-control" id="confirmPassword" [(ngModel)]="_confirmPassword" ngControl="confirmPassword">
+                <span class="form-control-feedback"></span>
+            </div>
+            <div class="two-buttons">
+                <wc-button [isDisabled]="_isRequesting" [style]="'btn btn-lg btn-primary btn-block btn-reigster'" [label]="'Register'" [workingLabel]="'Registering...'"></wc-button>
+                <button class="btn btn-lg btn-primary btn-block" (click)="cancel()" type="button">Cancel</button>
+            </div>
+        </form>
+    </div>
 </div>
