--- a/app/confirm-account/confirm-account.component.html
+++ b/app/confirm-account/confirm-account.component.html
@@ -1,19 +1,17 @@
 <div class="container">
     <div class="card card-container">
         <form role="form" class="form-signup" (ngSubmit)="submit()" #form="ngForm">
+            <div *ngIf="_validationErrors" [innerHtml]="_validationErrors" class="alert alert-danger"></div>
             <div class="form-group has-feedback">
                 <label for="password">Enter a password</label>
-                <input type="password" class="form-control" id="password" [(ngModel)]="_tokens.password" ngControl="password" pattern="/^[a-zA-Z]{6,}$/" required>
-                <span class="form-control-feedback"></span>
+                <input type="password" class="form-control" id="password" [(ngModel)]="_tokens.password" required>
             </div>
             <div class="form-group has-feedback">
                 <label for="confirmPassword">Confirm password</label>
-                <input type="password" class="form-control" id="confirmPassword" [(ngModel)]="_confirmPassword" ngControl="confirmPassword">
-                <span class="form-control-feedback"></span>
+                <input type="password" class="form-control" id="confirmPassword" [(ngModel)]="_confirmPassword" required>
             </div>
-            <div class="two-buttons">
-                <wc-button [isDisabled]="_isRequesting" [style]="'btn btn-lg btn-primary btn-block btn-reigster'" [label]="'Register'" [workingLabel]="'Registering...'"></wc-button>
-                <button class="btn btn-lg btn-primary btn-block" (click)="cancel()" type="button">Cancel</button>
+            <div>
+                <wc-button [isDisabled]="_isRequesting" [style]="'btn btn-lg btn-primary btn-block btn-signin'" [label]="'Set Password'" [workingLabel]="'Setting Password...'"></wc-button>
             </div>
         </form>
     </div>
