--- a/app/recent-calibrations/recent-calibrations.component.html
+++ b/app/recent-calibrations/recent-calibrations.component.html
@@ -6,8 +6,8 @@
         <div class="row">
             <div class="col-xs-6">
                 <div class="form-group">
-                    <label for="favourite">Filter by depot name</label>
-                    <select id="favourite" name="favourite" class="form-control" [(ngModel)]="selectedDepotName">
+                    <label for="depotName">Filter by depot name</label>
+                    <select id="depotName" name="depotName" class="form-control" #depotName (change)="setDepotName(depotName.value)" [(ngModel)]="selectedDepotName">
                         <option *ngFor="#item of _depotNames">{{item}}</option>
                     </select>
                 </div>
